added multi purpose strctures

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -72,63 +72,69 @@ pu-underground-belt=Underground belt
 pu-splitter=Belt splitter
 pu-inserter=Inserter
 pu-filter-inserter=Filter Inserter
-imp=Import Dock
-exp=Export Dock
-adm=Administration Center
-aml=Advanced Material Lab
-apf=Appliances Factory
-asm=High-Power Blast Furnace
-bmp=Basic Materials Plant
-cfl=Corporate FTL Laboratory
-chp=Chemical Plant
-cim=Corporate Immortality Center
-clf=Textile Manufacturing
-clr=Cleanroom
-cm=Core Module
-cog=Chamber of Global Commerce
-col=Collector
-cor=Corporation Headquarters
-cte=Corporate Terraformer
-eep=Einsteinium Enrichment
-elp=Electronics Plant
-ext=Extractor
-fmt=Fermenter
-fp=Food Processor
-frm=Farmstead
-fs=Metalist Studio
-gf=Glass Furnace
-hb1=Pioneer Habitation
-hb2=Settler Habitation
-hb3=Technician Habitation
-hb4=Engineer Habitation
-hb5=Scientist Habitation
-hbb=Barracks
-hbc=Communal Abode
-hbl=Luxury Residence
-hbm=Management Domicile
-hyf=Hydroponics Farm
-inc=Incinerator
-ivp=In-Vitro Plant
-lbo=Laboratory
-lm=Local Market
-mca=Medium Components Assembly
-orc=Orchard
-pol=Polymer Plant
-pp1=Prefab Plant MK1
-pp2=Prefab Plant MK2
-pp3=Prefab Plant MK3
-pp4=Prefab Plant MK4
-ppf=3D Printer
-ref=Refinery
-rig=Rig
-sca=Small Components Assembly
-sd=Software Development
-sl=Software Labs
-sme=Smelter
-sto=Storage Facility
-tnp=Technetium Processing
-wel=Welding Plant
-wpl=Weaving Plant
+imp=Import Dock (IMP)
+exp=Export Dock (EXP)
+adm=Administration Center (ADM)
+aml=Advanced Material Lab (AML)
+apf=Appliances Factory (APF)
+asm=High-Power Blast Furnace (ASM)
+bmp=Basic Materials Plant (BMP)
+cfl=Corporate FTL Laboratory (CFL)
+chp=Chemical Plant (CHP)
+cim=Corporate Immortality Center (CIM)
+clf=Textile Manufacturing (CLF)
+clr=Cleanroom (CLR)
+cm=Core Module (CM)
+cog=Chamber of Global Commerce (COG)
+col=Collector (COL)
+cor=Corporation Headquarters (COR)
+cte=Corporate Terraformer (CTE)
+eep=Einsteinium Enrichment (EEP)
+elp=Electronics Plant (ELP)
+ext=Extractor (EXT)
+fmt=Fermenter (FMT)
+fp=Food Processor (FP)
+frm=Farmstead (FRM)
+fs=Metalist Studio (FS)
+gf=Glass Furnace (GF)
+hb1=Pioneer Habitation (HB1)
+hb2=Settler Habitation (HB2)
+hb3=Technician Habitation (HB3)
+hb4=Engineer Habitation (HB4)
+hb5=Scientist Habitation (HB5)
+mxt=Multi Extractor (MXT)
+pb1=Pioneer Workplace (PB1)
+pb2=Settler Workplace (PB2)
+pb3=Technician Workplace (PB3)
+pb4=Engineer Workplace (PB4)
+pb5=Scientist Workplace (PB5)
+hbb=Barracks (HBB)
+hbc=Communal Abode (HBC)
+hbl=Luxury Residence (HBL)
+hbm=Management Domicile (HBM)
+hyf=Hydroponics Farm (HYF)
+inc=Incinerator (INC)
+ivp=In-Vitro Plant (IVP)
+lbo=Laboratory (LBO)
+lm=Local Market (LM)
+mca=Medium Components Assembly (MCA)
+orc=Orchard (ORC)
+pol=Polymer Plant (POL)
+pp1=Prefab Plant MK1 (PP1)
+pp2=Prefab Plant MK2 (PP2)
+pp3=Prefab Plant MK3 (PP3)
+pp4=Prefab Plant MK4 (PP4)
+ppf=3D Printer (PPF)
+ref=Refinery (REF)
+rig=Rig (RIG)
+sca=Small Components Assembly (SCA)
+sd=Software Development (SD)
+sl=Software Labs (SL)
+sme=Smelter (SME)
+sto=Storage Facility (STO)
+tnp=Technetium Processing (TNP)
+wel=Welding Plant (WEL)
+wpl=Weaving Plant (WPL)
 amm=Ammonia deposit
 ar=Argon deposit
 f=Flouride deposit
@@ -164,216 +170,216 @@ module-2=Unmotivated Workers
 module-3=Content Workers
 module-4=Happy Workers
 module-5=Ecstatic Workers
-alg=Protein-Rich Algae
-bea=Protein-Rich Beans
-caf=Caffeinated Beans
-gra=Grapes
-grn=High-Carb Grains
-hcp=Hydrocarbon Plants
-her=Spicy Herbs
-hop=Flowery Hops
-mai=High-Carb Maize
-mtp=Meat Tissue Patties
-nut=Triglyceride Nuts
-ppa=Protein Paste
-rco=Raw Cotton Fiber
-rsi=Raw Silk Strains
-veg=Triglyceride Fruits
-ast=Alpha-Spabilized Titanium
-bgo=Blue Gold
-bro=Bronze
-bti=Budget Titanium Replacement
-fet=Ferro-Titanium
-rgo=Red Gold
-dw=Drinking Water
-exo=Exoskeleton Work Suit
-fim=Flavoured Insta-Meal
-hms=HazMat Work Suit
-hss=Smart Space Suit
-lc=AI-Assisted Lab Coat
-mea=Quality Meat Meal
-med=Basic Medical Kit
-ove=Basic Overalls
-pda=Personal Data Assistant
-pt=Power Tools
-rat=Basic Rations
-scn=Multi-Purpose Scanner
-ws=Scientific Work Station
-bac=Helpful Bacteria
-bl=Breathable Liquid
-ble=Desaturation Agent
-cst=Cryogenic Stabilizer
-ddt=DDT Plant Agent
-flx=Flux
-ind=Indigo Colorant
-lcr=Liquid Crystals
-nr=Nano-Enhanced Resin
-ns=Nutrient Solution
-tcl=TCL Acid
-thf=ThermoFluid
-epo=Epoxy Resin
-gl=Glass
-inf=InsuFoam
-mcg=Mineral Construction Granulate
-mtc=MegaTube Coating
-ncs=Nano-Carbon Sheeting
-nfi=Nano Fiber
-ng=Nano-Coated Glass
-rg=Reinforced Glass
-sea=Poly-Sulfite Sealant
-aef=Aerostat Foundation
-air=Air Scrubber
-fc=Flow Control Device
-flp=Fluid Piping
-gc=Gas Container
-gv=Gas Vent
-mgc=Magnetic Ground Cover
-mhl=Metal-Halide Lighting System
-psh=Pressure Shielding
-rsh=Radiation Shielding
-tcs=Stabilized Technetium
-tru=Truss
-tsh=Thermal Shielding
-abh=Advanced Bulkhead
-ade=Advanced Deck Elements
-ase=Advanced Structural Elements
-ata=Advanced Transparent Aperture
-bbh=Basic Bulkhead
-bde=Basic Deck Elements
-bse=Basic Structural Elements
-bta=Basic Transparent Aperture
-hse=Hardened Structural Elements
-lbh=Lightweight Bulkhead
-lde=Lightweight Deck Elements
-lse=Lightweight Structural Elements
-lta=Lightweight Transparent Aperture
-rbh=Reinforced Bulkhead
-rde=Reinforced Deck Elements
-rse=Reinforced Structural Elements
-rta=Reinforced Transparent Aperture
-awf=Active Water Filter
-bmf=Basic Mainframe
-bws=Basic Workstation
-dis=Information Display
-hd=Holographic Display
-hpc=Handheld Personal Console
-pa=Parabolic Antenna
-sar=Sensor Array
-cd=Capacitative Display
-ebs=Embedded System
-fan=Active Cooling Device
-mb=Motherboard
-mpc=Micro-Processor
-pcb=Printed Circuit Board
-ram=Memory Bank
-rom=Non-volatile Memory
-sen=Sensor
-soc=System-on-a-Chip
-sp=Solar Panel
-tpu=Tensor Processing Unit
-bco=Budget Connectors
-bgc=Shielded Connectors
-cap=Electric Field Capacitor
-hcc=High Capacity Connectors
-ldi=Laser Diode
-mfk=Medium Fastener Kit
-mwf=Medium Wafer
-sfk=Small Fastener Kit
-swf=Small Wafer
-trn=Advanced Transistor
-cc=Climate Controller
-cru=Cryogenic Unit
-ffc=FTL Field Controller
-lis=Life Support System
-tac=Targeting Computer
-wr=Water Reclaimer
-be=Beryllium
-c=Carbon
-ca=Calcium
-cl=Chlorine
-es=Einsteinium
-i=Iodine
-na=Sodium
-ta=Tantalum
-tc=Technetium
-w=Wolfram
-zr=Zirconium
-ff=FTL Fuel
-sf=STL Fuel
-ar=Argon
-f=Fluorine
-h=Hydrogen
-he=Helium
-he3=Helium 3 Isotope
-n=Nitrogen
-ne=Neon
-o=Oxygen
-bts=Bacterial Tungsten Solution
-h2o=Water
-les=Liquid Einsteinium
-ale=Stellar Pale Ale
-cof=Caffeinated Infusion
-gin=Einsteinium-Infused Gin
-kom=Kombucha
-nst=NeuroStimulants
-pwo=Padded Work Overall
-rep=Repair Kit
-sc=Stem Cell Treatment
-vg=Vita Gel
-win=Smart Zinfandel
-al=Aluminium
-au=Gold
-cu=Copper
-fe=Iron
-si=Silicon
-stl=Steel
-ti=Titanium
-ber=Beryl Crystals
-cli=Caliche Rock
-gal=Galerite Rock
-hal=Halite Crystals
-lst=Limestone
-mag=Magnetite
-mg=Magnesium
-s=Sulfur
-tai=Tantalite
-tco=Technetium Oxide
-ts=Tectosilisite
-zir=Zircon Crystals
-alo=Aluminium Ore
-auo=Gold Ore
-cuo=Copper Ore
-feo=Iron Ore
-sio=Silicon Ore
-tio=Titanium Ore
-dcl=Durable Casing L
-dcm=Durable Casing M
-dcs=Durable Casing S
-pe=Poly-Ethylene
-pg=Polymer Granulate
-psl=Polymer Sheet Type L
-psm=Polymer Sheet Type M
-pss=Polymer Sheet Type S
-nv1=Navigation Module MK1
-nv2=Navigation Module MK1
-cnn=Convolutional Neural Network
-da=Data Analyzer
-dd=Distributed Database
-dv=Data Visualizer
-fnn=Feedforward Neural Network
-ld=Local Database
-nf=Networking Framework
-os=Operating System
-ra=Rating Algorithm
-rnn=Recurrent Neural Network
-sa=Search Algorithm
-sal=Sorting Algorithm
-snm=Spatial Navigation Map
-wai=Weak Artifical Intelligence
-wm=Window Manager
-cot=Cotton Fabric
-kv=Kevlar Fabric
-nl=Nylon Fabric
-sil=Silken Fabric
-tk=TechnoKevlar Fabric
-amm=Ammonia
+alg=Protein-Rich Algae (ALG)
+bea=Protein-Rich Beans (BEA)
+caf=Caffeinated Beans (CAF)
+gra=Grapes (GRA)
+grn=High-Carb Grains (GRN)
+hcp=Hydrocarbon Plants (HCP)
+her=Spicy Herbs (HER)
+hop=Flowery Hops (HOP)
+mai=High-Carb Maize (MAI)
+mtp=Meat Tissue Patties (MTP)
+nut=Triglyceride Nuts (NUT)
+ppa=Protein Paste (PPA)
+rco=Raw Cotton Fiber (RCO)
+rsi=Raw Silk Strains (RSI)
+veg=Triglyceride Fruits (VEG)
+ast=Alpha-Spabilized Titanium (AST)
+bgo=Blue Gold (BGO)
+bro=Bronze (BRO)
+bti=Budget Titanium Replacement (BTI)
+fet=Ferro-Titanium (FET)
+rgo=Red Gold (RGO)
+dw=Drinking Water (DW)
+exo=Exoskeleton Work Suit (EXO)
+fim=Flavoured Insta-Meal (FIM)
+hms=HazMat Work Suit (HMS)
+hss=Smart Space Suit (HSS)
+lc=AI-Assisted Lab Coat (LC)
+mea=Quality Meat Meal (MEA)
+med=Basic Medical Kit (MED)
+ove=Basic Overalls (OVE)
+pda=Personal Data Assistant (PDA)
+pt=Power Tools (PT)
+rat=Basic Rations (RAT)
+scn=Multi-Purpose Scanner (SCN)
+ws=Scientific Work Station (WS)
+bac=Helpful Bacteria (BAC)
+bl=Breathable Liquid (BL)
+ble=Desaturation Agent (BLE)
+cst=Cryogenic Stabilizer (CST)
+ddt=DDT Plant Agent (DDT)
+flx=Flux (FLX)
+ind=Indigo Colorant (IND)
+lcr=Liquid Crystals (LCR)
+nr=Nano-Enhanced Resin (NR)
+ns=Nutrient Solution (NS)
+tcl=TCL Acid (TCL)
+thf=ThermoFluid (THF)
+epo=Epoxy Resin (EPO)
+gl=Glass (GL)
+inf=InsuFoam (INF)
+mcg=Mineral Construction Granulate (MCG)
+mtc=MegaTube Coating (MTC)
+ncs=Nano-Carbon Sheeting (NCS)
+nfi=Nano Fiber (NFI)
+ng=Nano-Coated Glass (NG)
+rg=Reinforced Glass (RG)
+sea=Poly-Sulfite Sealant (SEA)
+aef=Aerostat Foundation (AEF)
+air=Air Scrubber (AIR)
+fc=Flow Control Device (FC)
+flp=Fluid Piping (FLP)
+gc=Gas Container (GC)
+gv=Gas Vent (GV)
+mgc=Magnetic Ground Cover (MGC)
+mhl=Metal-Halide Lighting System (MHL)
+psh=Pressure Shielding (PSH)
+rsh=Radiation Shielding (RSH)
+tcs=Stabilized Technetium (TCS)
+tru=Truss (TRU)
+tsh=Thermal Shielding (TSH)
+abh=Advanced Bulkhead (ABH)
+ade=Advanced Deck Elements (ADE)
+ase=Advanced Structural Elements (ASE)
+ata=Advanced Transparent Aperture (ATA)
+bbh=Basic Bulkhead (BBH)
+bde=Basic Deck Elements (BDE)
+bse=Basic Structural Elements (BSE)
+bta=Basic Transparent Aperture (BTA)
+hse=Hardened Structural Elements (HSE)
+lbh=Lightweight Bulkhead (LBH)
+lde=Lightweight Deck Elements (LDE)
+lse=Lightweight Structural Elements (LSE)
+lta=Lightweight Transparent Aperture (LTA)
+rbh=Reinforced Bulkhead (RBH)
+rde=Reinforced Deck Elements (RDE)
+rse=Reinforced Structural Elements (RSE)
+rta=Reinforced Transparent Aperture (RTA)
+awf=Active Water Filter (AWF)
+bmf=Basic Mainframe (BMF)
+bws=Basic Workstation (BWS)
+dis=Information Display (DIS)
+hd=Holographic Display (HD)
+hpc=Handheld Personal Console (HPC)
+pa=Parabolic Antenna (PA)
+sar=Sensor Array (SAR)
+cd=Capacitative Display (CD)
+ebs=Embedded System (EBS)
+fan=Active Cooling Device (FAN)
+mb=Motherboard (MB)
+mpc=Micro-Processor (MPC)
+pcb=Printed Circuit Board (PCB)
+ram=Memory Bank (RAM)
+rom=Non-volatile Memory (ROM)
+sen=Sensor (SEN)
+soc=System-on-a-Chip (SOC)
+sp=Solar Panel (SP)
+tpu=Tensor Processing Unit (TPU)
+bco=Budget Connectors (BCO)
+bgc=Shielded Connectors (BGC)
+cap=Electric Field Capacitor (CAP)
+hcc=High Capacity Connectors (HCC)
+ldi=Laser Diode (LDI)
+mfk=Medium Fastener Kit (MFK)
+mwf=Medium Wafer (MWF)
+sfk=Small Fastener Kit (SFK)
+swf=Small Wafer (SWF)
+trn=Advanced Transistor (TRN)
+cc=Climate Controller (CC)
+cru=Cryogenic Unit (CRU)
+ffc=FTL Field Controller (FFC)
+lis=Life Support System (LIS)
+tac=Targeting Computer (TAC)
+wr=Water Reclaimer (WR)
+be=Beryllium (BE)
+c=Carbon (C)
+ca=Calcium (CA)
+cl=Chlorine (CL)
+es=Einsteinium (ES)
+i=Iodine (I)
+na=Sodium (NA)
+ta=Tantalum (TA)
+tc=Technetium (TC)
+w=Wolfram (W)
+zr=Zirconium (ZR)
+ff=FTL Fuel (FF)
+sf=STL Fuel (SF)
+ar=Argon (AR)
+f=Fluorine (F)
+h=Hydrogen (H)
+he=Helium (HE)
+he3=Helium 3 Isotope (HE3)
+n=Nitrogen (N)
+ne=Neon (NE)
+o=Oxygen (O)
+bts=Bacterial Tungsten Solution (BTS)
+h2o=Water (H2O)
+les=Liquid Einsteinium (LES)
+ale=Stellar Pale Ale (ALE)
+cof=Caffeinated Infusion (COF)
+gin=Einsteinium-Infused Gin (GIN)
+kom=Kombucha (KOM)
+nst=NeuroStimulants (NST)
+pwo=Padded Work Overall (PWO)
+rep=Repair Kit (REP)
+sc=Stem Cell Treatment (SC)
+vg=Vita Gel (VG)
+win=Smart Zinfandel (WIN)
+al=Aluminium (AL)
+au=Gold (AU)
+cu=Copper (CU)
+fe=Iron (FE)
+si=Silicon (SI)
+stl=Steel (STL)
+ti=Titanium (TI)
+ber=Beryl Crystals (BER)
+cli=Caliche Rock (CLI)
+gal=Galerite Rock (GAL)
+hal=Halite Crystals (HAL)
+lst=Limestone (LST)
+mag=Magnetite (MAG)
+mg=Magnesium (MG)
+s=Sulfur (S)
+tai=Tantalite (TAI)
+tco=Technetium Oxide (TCO)
+ts=Tectosilisite (TS)
+zir=Zircon Crystals (ZIR)
+alo=Aluminium Ore (ALO)
+auo=Gold Ore (AUO)
+cuo=Copper Ore (CUO)
+feo=Iron Ore (FEO)
+sio=Silicon Ore (SIO)
+tio=Titanium Ore (TIO)
+dcl=Durable Casing L (DCL)
+dcm=Durable Casing M (DCM)
+dcs=Durable Casing S (DCS)
+pe=Poly-Ethylene (PE)
+pg=Polymer Granulate (PG)
+psl=Polymer Sheet Type L (PSL)
+psm=Polymer Sheet Type M (PSM)
+pss=Polymer Sheet Type S (PSS)
+nv1=Navigation Module MK1 (NV1)
+nv2=Navigation Module MK1 (NV2)
+cnn=Convolutional Neural Network (CNN)
+da=Data Analyzer (DA)
+dd=Distributed Database (DD)
+dv=Data Visualizer (DV)
+fnn=Feedforward Neural Network (FNN)
+ld=Local Database (LD)
+nf=Networking Framework (NF)
+os=Operating System (OS)
+ra=Rating Algorithm (RA)
+rnn=Recurrent Neural Network (RNN)
+sa=Search Algorithm (SA)
+sal=Sorting Algorithm (SAL)
+snm=Spatial Navigation Map (SNM)
+wai=Weak Artifical Intelligence (WAI)
+wm=Window Manager (WM)
+cot=Cotton Fabric (COT)
+kv=Kevlar Fabric (KV)
+nl=Nylon Fabric (NL)
+sil=Silken Fabric (SIL)
+tk=TechnoKevlar Fabric (TK)
+amm=Ammonia (AMM)
