mod loads using no-base-mod

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -72,6 +72,7 @@ pu-underground-belt=Underground belt
 pu-splitter=Belt splitter
 pu-inserter=Inserter
 pu-filter-inserter=Filter Inserter
+pu-loader=Loader
 imp=Import Dock (IMP)
 exp=Export Dock (EXP)
 adm=Administration Center (ADM)
@@ -170,6 +171,7 @@ module-2=Unmotivated Workers
 module-3=Content Workers
 module-4=Happy Workers
 module-5=Ecstatic Workers
+pu-wire=Control wire
 alg=Protein-Rich Algae (ALG)
 bea=Protein-Rich Beans (BEA)
 caf=Caffeinated Beans (CAF)
