first objective works

--- a/locale/en/pu-supply-chain.cfg
+++ b/locale/en/pu-supply-chain.cfg
@@ -385,3 +385,6 @@ nl=Nylon Fabric (NL)
 sil=Silken Fabric (SIL)
 tk=TechnoKevlar Fabric (TK)
 amm=Ammonia (AMM)
+
+[flying-text]
+objective-complete=Objective Complete
